[gd_scene load_steps=56 format=3 uid="uid://dcb260rwf1sj2"]

[ext_resource type="Script" path="res://components/Entities/player/scripts/state/PlayerStateMachine.gd" id="1_1nv86"]
[ext_resource type="Script" path="res://components/Entities/player/scripts/state/Idle.gd" id="2_re5th"]
[ext_resource type="Script" path="res://components/Entities/player/scripts/state/functionality/IdleAttackInput.gd" id="3_y7it2"]
[ext_resource type="Script" path="res://components/Entities/player/scripts/state/functionality/IdleWeaponHandler.gd" id="4_7naah"]
[ext_resource type="Script" path="res://components/shared/scripts/containers/GearManager.gd" id="4_ieury"]
[ext_resource type="Script" path="res://components/Entities/player/scripts/state/Eating.gd" id="4_sgf1j"]
[ext_resource type="Script" path="res://components/Entities/player/scripts/state/Windup.gd" id="5_8si8d"]
[ext_resource type="Script" path="res://components/Entities/player/scripts/state/functionality/UseItemInput.gd" id="5_41g28"]
[ext_resource type="PackedScene" uid="uid://blfvfc7exomsg" path="res://components/Entities/items/GameItems.tscn" id="5_ht5ei"]
[ext_resource type="Script" path="res://components/shared/scripts/containers/InventoryManager.gd" id="6_jyb60"]
[ext_resource type="Script" path="res://components/Entities/player/scripts/state/Swing.gd" id="6_lp4ar"]
[ext_resource type="Script" path="res://components/Entities/player/scripts/state/Recovery.gd" id="7_bf8en"]
[ext_resource type="Script" path="res://components/Entities/player/scripts/DirectionalMovement.gd" id="7_djh8g"]
[ext_resource type="Script" path="res://components/shared/scripts/equipment/EquipmentSlotHelper.gd" id="7_juny0"]
[ext_resource type="Script" path="res://components/Entities/player/scripts/state/functionality/InputAttackCancel.gd" id="7_la0f7"]
[ext_resource type="Script" path="res://components/Entities/player/scripts/DevModeMovement.gd" id="8_khi54"]
[ext_resource type="Script" path="res://components/Entities/player/scripts/state/AttackCancel.gd" id="8_utxg2"]
[ext_resource type="Script" path="res://components/shared/scripts/containers/HotbarManager.gd" id="8_yp7wi"]
[ext_resource type="Script" path="res://components/shared/scripts/equipment/EquipmentHelper.gd" id="9_vndym"]
[ext_resource type="Script" path="res://components/Entities/player/scripts/state/AttackRecoil.gd" id="10_tt7v8"]
[ext_resource type="Script" path="res://components/Entities/player/scripts/FrontLight.gd" id="11_65oqg"]
[ext_resource type="Script" path="res://components/Entities/Player/MovementSounds.gd" id="12_ft81l"]
[ext_resource type="Script" path="res://components/Entities/player/scripts/state/BlockStart.gd" id="12_kptwu"]
[ext_resource type="Script" path="res://components/Entities/player/scripts/state/Blocking.gd" id="13_yx2o4"]
[ext_resource type="Script" path="res://components/Entities/Player/Camera.gd" id="14_qb0xk"]
[ext_resource type="Script" path="res://components/Entities/player/scripts/state/BlockEnding.gd" id="14_y68tw"]
[ext_resource type="Script" path="res://components/Entities/player/scripts/MouseMovement.gd" id="16_gvfj2"]
[ext_resource type="AudioStream" uid="uid://cq8x83kwk4opl" path="res://sounds/ghostly_windy_ambience.wav" id="16_rljpy"]
[ext_resource type="Script" path="res://components/Entities/player/hud/FPSCounter.gd" id="18_0i3d2"]
[ext_resource type="Script" path="res://components/Entities/player/scripts/sounds/AttackSounds.gd" id="19_mgc05"]
[ext_resource type="Script" path="res://components/Entities/player/scripts/sounds/RandomAmbientSounds.gd" id="21_63v10"]
[ext_resource type="Script" path="res://components/shared/scripts/skills/Health.gd" id="22_bgx6x"]
[ext_resource type="Script" path="res://components/Entities/player/scripts/CrouchInput.gd" id="26_d22uf"]
[ext_resource type="Script" path="res://components/shared/scripts/sounds/GetDamagedSounds.gd" id="28_u2q57"]
[ext_resource type="Script" path="res://components/shared/scripts/skills/Endurance.gd" id="29_smdva"]
[ext_resource type="Script" path="res://components/Entities/player/Stealth.gd" id="32_ikuon"]
[ext_resource type="Script" path="res://components/Entities/player/scripts/ColliderFunctionality.gd" id="32_w7w6s"]
[ext_resource type="Script" path="res://components/Entities/player/scripts/HeadScript.gd" id="33_cl8aj"]
[ext_resource type="PackedScene" uid="uid://csgf4qcsol5ih" path="res://ui/look_at_text.tscn" id="34_a5qka"]
[ext_resource type="PackedScene" uid="uid://ctqtltwdstq8w" path="res://ui/Inventory.tscn" id="35_36exr"]
[ext_resource type="Shader" path="res://shaders/DamageVignette.gdshader" id="36_1ahqv"]
[ext_resource type="PackedScene" path="res://ui/StatusBars.tscn" id="36_54iry"]
[ext_resource type="Script" path="res://shaders/DamageVignette.gd" id="37_wyik8"]
[ext_resource type="Shader" path="res://shaders/red_overlay.gdshader" id="38_62aiw"]
[ext_resource type="Script" path="res://shaders/RedOverlay.gd" id="39_24o3p"]
[ext_resource type="Shader" path="res://shaders/vignette.gdshader" id="40_6mr1p"]
[ext_resource type="Script" path="res://shaders/VignetteHealth.gd" id="41_22i2c"]
[ext_resource type="Shader" path="res://shaders/PixelShader.gdshader" id="42_qnj6d"]

[sub_resource type="GDScript" id="GDScript_xn7no"]
script/source = "extends CharacterBody3D
class_name Actor

# Functions
@onready var health = $Skills/Health
@onready var stealth = $Skills/Stealth

@onready var state_machine = $PlayerStateMachine
@onready var hotbar = $Gear/Hotbar

@onready var raycast : RayCast3D = $Head/Camera/RayCast

@onready var movement_sounds = $MovementSystem/MovementSounds

@export var crouch_transition_time = 0.3
@export var base_noise_level = 50.0
@export var not_crouching_noise_modifier = 50.0

var crouching = false:
	set(val):
		if val == false:
			crouch_ended.emit()
			crouch_toggled.emit(val)
	
		elif val == true:
			crouch_started.emit()
			crouch_toggled.emit(val)
			
		crouching = val
	get:
		return crouching

signal on_hit
signal on_blocked_hit

signal crouch_started
signal crouch_ended
signal crouch_toggled

signal footstep_sound_made

func _ready():
	PlayerDataExtra.set_player(self)
	
	movement_sounds.sound_made.connect(_process_footstep_sound)
	
func _process(_delta):
	pass
	
func _process_footstep_sound():
	var stealth_level = stealth.level
	var stealth_reduction_per_level = stealth.percent_reduction_per_level
	var percent_volume_reduction = stealth_level * stealth_reduction_per_level
		
	#Final_Volume=Volume_Base×(1−(Sneak_Skill_Level×Reduction_Per_Level))
	
	var final_volume = base_noise_level * (1 - (percent_volume_reduction))
	
	if crouching == false:
		final_volume += not_crouching_noise_modifier
	
	footstep_sound_made.emit(final_volume)
	
func get_equipped_weapon():
	var item = hotbar.get_selected_hotbar_item()
	
	if item.is_in_group(\"weapons\"):
		return item
		
	return null

func get_thing_im_looking_at():
	if raycast.is_colliding() == false:
		return null
		
	var collided_object = raycast.get_collider()
	return collided_object
	
# getting hit by an enemy.
# - entity: the enemy
# - damage: how much damage to apply to the player
func hit(entity, damage):
	if state_machine.current_state == Enums.ActorStates.BLOCKING:
		var thing = get_thing_im_looking_at()
		if thing == entity or thing.get_parent() == entity:
			on_blocked_hit.emit(entity, damage)
			return
			
	health.damage(damage)
	on_hit.emit(entity, damage)
"

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gdq8c"]
radius = 0.2
height = 1.2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a810w"]
shader = ExtResource("36_1ahqv")
shader_parameter/vignette_intensity = 3.0
shader_parameter/vignette_opacity = 0.0
shader_parameter/vignette_rgb = Color(1, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iueqj"]
shader = ExtResource("38_62aiw")
shader_parameter/opacity = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t873o"]
shader = ExtResource("40_6mr1p")
shader_parameter/vignette_intensity = 0.15
shader_parameter/vignette_opacity = 0.0
shader_parameter/vignette_rgb = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_656pa"]
shader = ExtResource("42_qnj6d")
shader_parameter/pixelation_level = 92.0

[sub_resource type="BoxShape3D" id="BoxShape3D_qcmu2"]
size = Vector3(1, 2, 1)

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 1)
disable_mode = 2
collision_layer = 32
collision_mask = 9
script = SubResource("GDScript_xn7no")
metadata/Camera = NodePath("Head/Camera")
metadata/IsPlayer = true

[node name="PlayerStateMachine" type="Node" parent="."]
script = ExtResource("1_1nv86")

[node name="Idle" type="Node" parent="PlayerStateMachine"]
script = ExtResource("2_re5th")
endurance_node_path = NodePath("../../Skills/Endurance")

[node name="AttackInput" type="Node" parent="PlayerStateMachine/Idle"]
script = ExtResource("3_y7it2")

[node name="UseItemInput" type="Node" parent="PlayerStateMachine/Idle"]
script = ExtResource("5_41g28")

[node name="ItemHandler" type="Node" parent="PlayerStateMachine/Idle/UseItemInput"]
script = ExtResource("4_7naah")

[node name="AttackWindup" type="Node" parent="PlayerStateMachine"]
script = ExtResource("5_8si8d")

[node name="InputAttackCancel" type="Node" parent="PlayerStateMachine/AttackWindup"]
script = ExtResource("7_la0f7")

[node name="AttackSwing" type="Node" parent="PlayerStateMachine"]
script = ExtResource("6_lp4ar")

[node name="AttackRecovery" type="Node" parent="PlayerStateMachine"]
script = ExtResource("7_bf8en")

[node name="AttackCancel" type="Node" parent="PlayerStateMachine"]
script = ExtResource("8_utxg2")

[node name="AttackRecoil" type="Node" parent="PlayerStateMachine"]
script = ExtResource("10_tt7v8")

[node name="BlockStart" type="Node" parent="PlayerStateMachine"]
script = ExtResource("12_kptwu")

[node name="Blocking" type="Node" parent="PlayerStateMachine"]
script = ExtResource("13_yx2o4")

[node name="BlockEnding" type="Node" parent="PlayerStateMachine"]
script = ExtResource("14_y68tw")

[node name="Eating" type="Node" parent="PlayerStateMachine"]
script = ExtResource("4_sgf1j")

[node name="Gear" type="Node" parent="."]
script = ExtResource("4_ieury")
metadata/GameItems = ExtResource("5_ht5ei")

[node name="Inventory" type="Node" parent="Gear"]
script = ExtResource("6_jyb60")

[node name="Slots" type="Node" parent="Gear/Inventory"]
metadata/NumSlots = 10

[node name="Equipment" type="Node" parent="Gear"]

[node name="Slots" type="Node" parent="Gear/Equipment"]

[node name="Weapon" type="Node" parent="Gear/Equipment/Slots"]
script = ExtResource("7_juny0")

[node name="Hotbar" type="Node" parent="Gear" node_paths=PackedStringArray("equipment_helper", "camera")]
script = ExtResource("8_yp7wi")
equipment_helper = NodePath("../EquipmentHelper")
camera = NodePath("../../Head/Camera")

[node name="Slots" type="Node" parent="Gear/Hotbar"]
metadata/NumSlots = 3

[node name="EquipmentHelper" type="Node" parent="Gear"]
script = ExtResource("9_vndym")

[node name="MovementSystem" type="Node" parent="."]

[node name="MouseMovement" type="Node" parent="MovementSystem"]
script = ExtResource("16_gvfj2")
metadata/Camera = NodePath("../../Head/Camera")
metadata/Player = NodePath("../..")

[node name="DirectionalMovement" type="Node" parent="MovementSystem" node_paths=PackedStringArray("player", "camera")]
script = ExtResource("7_djh8g")
player = NodePath("../..")
camera = NodePath("../../Head/Camera")

[node name="DevModeMovement" type="Node" parent="MovementSystem/DirectionalMovement"]
script = ExtResource("8_khi54")

[node name="MovementSounds" type="Node" parent="MovementSystem" node_paths=PackedStringArray("audio_stream")]
script = ExtResource("12_ft81l")
audio_stream = NodePath("../../FootstepSoundPlayer")

[node name="CrouchInput" type="Node" parent="MovementSystem"]
script = ExtResource("26_d22uf")

[node name="Sounds" type="Node" parent="."]

[node name="Attacks" type="Node" parent="Sounds"]
script = ExtResource("19_mgc05")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Sounds/Attacks"]

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="Sounds/Attacks"]
volume_db = -12.071

[node name="AudioStreamHitObj" type="AudioStreamPlayer" parent="Sounds/Attacks"]
volume_db = -6.592

[node name="RandomAmbientSounds" type="Node" parent="Sounds"]
script = ExtResource("21_63v10")
metadata/CameraPath = NodePath("../../Head/Camera")

[node name="GetDamagedSounds" type="AudioStreamPlayer" parent="Sounds" node_paths=PackedStringArray("thing_to_track")]
bus = &"ReverbBus"
script = ExtResource("28_u2q57")
thing_to_track = NodePath("../..")
possible_sounds = ["res://sounds/player/receive_damage/GOREStab_Designed Slash Gore 03_DDUMAIS_NONE.wav", "res://sounds/player/receive_damage/GOREStab_Designed Slash Gore 04_DDUMAIS_NONE.wav", "res://sounds/player/receive_damage/GOREStab_Designed Slash Gore 05_DDUMAIS_NONE.wav", "res://sounds/player/receive_damage/GOREStab_Designed Slash Gore 06_DDUMAIS_NONE.wav", "res://sounds/player/receive_damage/GOREStab_Designed Slash Gore 07_DDUMAIS_NONE.wav", "res://sounds/player/receive_damage/GOREStab_Designed Slash Gore 09_DDUMAIS_NONE.wav", "res://sounds/player/receive_damage/GOREStab_Designed Slash Gore 11_DDUMAIS_NONE.wav"]
pitch_min = 0.5
pitch_max = 0.7

[node name="Skills" type="Node" parent="."]

[node name="Health" type="Node" parent="Skills"]
script = ExtResource("22_bgx6x")
level = 10
skill_name = "Health"
description = "Represents your overall wellbeing. Increases your hitpoints, i.e. how many hits you can take before dying."

[node name="Endurance" type="Node" parent="Skills"]
script = ExtResource("29_smdva")
level = 5

[node name="Stealth" type="Node" parent="Skills"]
script = ExtResource("32_ikuon")
level = 5
skill_name = "Stealth"

[node name="ActiveEffects" type="Node" parent="."]

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0705414, 0)
shape = SubResource("CapsuleShape3D_gdq8c")
script = ExtResource("32_w7w6s")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.436481, 0)
script = ExtResource("33_cl8aj")

[node name="Camera" type="Camera3D" parent="Head"]
cull_mask = 1048573
current = true
fov = 80.0
script = ExtResource("14_qb0xk")

[node name="RayCast" type="RayCast3D" parent="Head/Camera"]
exclude_parent = false
target_position = Vector3(0, 0, -10)
collision_mask = 3081
collide_with_areas = true

[node name="Lamp" type="Node3D" parent="Head"]

[node name="OmniLight3D" type="OmniLight3D" parent="Head/Lamp"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.644183, 0)
light_color = Color(0.839216, 0.513726, 0.321569, 1)
light_energy = 0.642
shadow_enabled = true
omni_range = 0.0
omni_attenuation = 0.707106

[node name="FrontLight" type="Node3D" parent="Head/Lamp" node_paths=PackedStringArray("camera")]
transform = Transform3D(1, 0, 0, 0, 0.99996, -0.00895342, 0, 0.00895342, 0.99996, 0, 0, 0)
script = ExtResource("11_65oqg")
camera = NodePath("../../Camera")

[node name="SpotLight3D" type="SpotLight3D" parent="Head/Lamp/FrontLight"]
transform = Transform3D(1, 0, 0, 0, 1, 6.51926e-09, 0, -6.51926e-09, 1, 0, 0.916717, -0.0082081)
light_color = Color(0.603922, 0.611765, 0.572549, 1)
light_energy = 0.05
light_specular = 0.0
shadow_enabled = true
spot_range = 4.0
spot_attenuation = 0.5
spot_angle = 80.0

[node name="Cooldown" type="Timer" parent="."]
one_shot = true

[node name="FootstepSoundTimer" type="Timer" parent="."]

[node name="FootstepSoundPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -15.927
pitch_scale = 1.18

[node name="Ambience_EerieCaveDripping" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_rljpy")
volume_db = -17.909
pitch_scale = 0.76
autoplay = true
bus = &"ReverbBus"

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CanvasLayer" type="CanvasLayer" parent="HUD"]

[node name="FPSCounter" type="Label" parent="HUD/CanvasLayer"]
offset_right = 40.0
offset_bottom = 23.0
script = ExtResource("18_0i3d2")

[node name="LookAtText" parent="HUD/CanvasLayer" instance=ExtResource("34_a5qka")]

[node name="Inventory" parent="HUD/CanvasLayer" instance=ExtResource("35_36exr")]
gear_path = NodePath("../../../Gear")

[node name="StatusBarsVBox" parent="HUD/CanvasLayer" instance=ExtResource("36_54iry")]

[node name="HealthBar" parent="HUD/CanvasLayer/StatusBarsVBox" index="0"]
health_node_path = NodePath("../../../../Skills/Health")

[node name="StaminaBar" parent="HUD/CanvasLayer/StatusBarsVBox" index="1"]
endurance_node_path = NodePath("../../../../Skills/Endurance")

[node name="ShaderStuff" type="CanvasLayer" parent="HUD"]

[node name="DamageVignette" type="ColorRect" parent="HUD/ShaderStuff"]
material = SubResource("ShaderMaterial_a810w")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("37_wyik8")

[node name="LowHealthRedOverlay" type="ColorRect" parent="HUD/ShaderStuff"]
material = SubResource("ShaderMaterial_iueqj")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("39_24o3p")

[node name="BlackVignette" type="ColorRect" parent="HUD/ShaderStuff"]
material = SubResource("ShaderMaterial_t873o")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("41_22i2c")

[node name="FunPixelShader" type="ColorRect" parent="HUD/ShaderStuff"]
show_behind_parent = true
z_index = -1
material = SubResource("ShaderMaterial_656pa")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Area3D" type="Area3D" parent="." groups=["PlayerDetection"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.555356, 0)
shape = SubResource("BoxShape3D_qcmu2")

[connection signal="on_hit" from="." to="HUD/ShaderStuff/DamageVignette" method="_on_hit"]
[connection signal="state_changed" from="PlayerStateMachine" to="Sounds/Attacks" method="_on_player_state_machine_state_changed"]
[connection signal="request_state_change" from="PlayerStateMachine/Idle" to="PlayerStateMachine" method="_on_request_state_change"]
[connection signal="attack_clicked" from="PlayerStateMachine/Idle/AttackInput" to="PlayerStateMachine/Idle" method="_on_attack_input_attack_clicked"]
[connection signal="request_state_change" from="PlayerStateMachine/AttackWindup" to="PlayerStateMachine" method="_on_request_state_change"]
[connection signal="attack_cancelled" from="PlayerStateMachine/AttackWindup/InputAttackCancel" to="PlayerStateMachine/AttackWindup" method="_on_input_attack_cancelled"]
[connection signal="request_state_change" from="PlayerStateMachine/AttackSwing" to="PlayerStateMachine" method="_on_request_state_change"]
[connection signal="request_state_change" from="PlayerStateMachine/AttackRecovery" to="PlayerStateMachine" method="_on_request_state_change"]
[connection signal="request_state_change" from="PlayerStateMachine/AttackCancel" to="PlayerStateMachine" method="_on_request_state_change"]
[connection signal="request_state_change" from="PlayerStateMachine/AttackRecoil" to="PlayerStateMachine" method="_on_request_state_change"]
[connection signal="request_state_change" from="PlayerStateMachine/BlockStart" to="PlayerStateMachine" method="_on_request_state_change"]
[connection signal="request_state_change" from="PlayerStateMachine/Blocking" to="PlayerStateMachine" method="_on_request_state_change"]
[connection signal="request_state_change" from="PlayerStateMachine/BlockEnding" to="PlayerStateMachine" method="_on_request_state_change"]
[connection signal="hotbar_item_changed" from="Gear/Hotbar" to="PlayerStateMachine/Idle/UseItemInput/ItemHandler" method="_on_hotbar_item_changed"]
[connection signal="player_ground_movement" from="MovementSystem/DirectionalMovement" to="MovementSystem/MovementSounds" method="_on_directional_movement_player_ground_movement"]
[connection signal="health_changed" from="Skills/Health" to="HUD/ShaderStuff/LowHealthRedOverlay" method="_on_health_health_changed"]
[connection signal="health_changed" from="Skills/Health" to="HUD/ShaderStuff/BlackVignette" method="_on_health_health_changed"]
[connection signal="request_inv_and_hb_update" from="HUD/CanvasLayer/Inventory" to="Gear" method="_on_request_inv_and_hb_update"]

[editable path="HUD/CanvasLayer/StatusBarsVBox"]
